2007-01-08 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile:
          Fixed gcj classpath problems
        * src/org/postgis/DriverWrapperLW.java,
          src/org/postgis/DriverWrapperAutoprobe.java,
          src/org/postgis/DriverWrapper.java,
          jtssrc/org/postgis/jts/JtsWrapper.java:
          fixed 8.2 compatibility

2007-01-05 Sandro Santilli <strk@refractions.net>

	* GNUmakefile: bring in extra/template_gis for all rules.
	* extras/template_gis/Makefile: have 'install' also install manuals.

2006-12-29 Sandro Santilli <strk@refractions.net>

	* configure.in: fixed GEOS_LDFLAGS detection
	  for older GEOS versions.
	* doc/postgis.xml: cleaned up Hard Upgrade section
	  (was unreadable).

2006-12-22 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile
          Added generation of basic javadoc zip file.

2006-12-20 Sandro Santilli <strk@refractions.net>

	* regress/README: wrote info about adding regression tests

2006-12-20 Kevein Neufeld <kneufeld@refractions.net>

	* lwgeom/lwgeom_gist.c
	  Added fix to permit gist indexes to have more than 459 null
	  geometries in a table

2006-12-15 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile
          Fixed Makefile for jts tests, commented debug options better
          
        * java/jdbc/jtssrc/org/postgis/jts/JtsBinaryWriter.java 
          Fix multi-dimension handling in JtsBinaryWriter, thanks to 
          Thomas Marti for the hints
          
        * java/jdbc/jtssrc/examples/JtsTestParser.java
          Improved SRID handling in regression tests and added 
          CoordinateArraySequence tests.

2006-12-15 Eduin Carrillo <yecarrillo@yahoo.com>

	* lwgeom/lwgeom_transform.c:
	  short circuit when source and target SRID are the same.

2006-12-15 Eduin Carrillo <yecarrillo@yahoo.com>

	* lwgeom/: Makefile, lwgeom_kml.c, lwpostgis.sql.in:
	  New AsKML() function
	* doc/postgis.xml: document new AsKML function.

