@@ -1,7 +1,7 @@
 PostGIS - Geographic Information Systems Extensions to PostgreSQL
 ~~~~~~~   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-VERSION: 1.2.0 (2006/12/20)
+VERSION: 1.2.1 (2007/01/11)
 
 MORE INFORMATION: http://postgis.refractions.net
 
