@@ -5,5 +5,5 @@
 
 REL_MAJOR_VERSION=1
 REL_MINOR_VERSION=2
-REL_MICRO_VERSION=0
+REL_MICRO_VERSION=1
 
