@@ -5822,6 +5822,25 @@ newdb=&#62; \i spatial_ref_sys.sql
       <title>Release Notes</title>
 
       <sect2>
+        <title>Release 1.2.1</title>
+
+        <para>Release date: 2007/01/11</para>
+
+        <para>This release provides bug fixes in PostgreSQL 8.2 
+        support and some small performance enhancements.</para>
+
+        <sect3>
+          <title>Changes</title>
+
+          <para>Fixed point-in-polygon shortcut bug in Within().</para>
+          <para>Fixed PostgreSQL 8.2 NULL handling for indexes.</para>
+          <para>Updated RPM spec files.</para>
+          <para>Added short-circuit for Transform() in no-op case.</para>
+          <para>JDBC: Fixed JTS handling for multi-dimensional geometries (thanks to Thomas Marti for hint and partial patch).  Additionally, now JavaDoc is compiled and packaged. Fixed classpath problems with GCJ. Fixed pgjdbc 8.2 compatibility, losing support for jdk 1.3 and older.</para>
+        </sect3>
+      </sect2>
+
+      <sect2>
         <title>Release 1.2.0</title>
 
         <para>Release date: 2006/12/08</para>
