@@ -1,3 +1,6 @@
+
+---------  PostGIS-1.2.1 release [2007-01-11] --------------------------
+
 2007-01-08 Markus Schaber <schabi@logix-tt.com>
 
         * java/jdbc/Makefile:
